--- a/Dag 3/artistHemsida/css/indexStyle.css
+++ b/Dag 3/artistHemsida/css/indexStyle.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Montserrat&family=Slabo+27px&display=swap');
 
 body{
-    background-color: grey;
+    background-color: white;
     font-family: 'Slabo 27px', serif;
 }
 
@@ -56,7 +56,7 @@ main{
     grid-template-columns: 1fr;
     grid-gap: 0px;
     text-align: center;
-    background-color: blue;
+    background-color: white;
 }
 
 main img{
@@ -68,13 +68,13 @@ main img{
 
 
 main article{
-    background-color: yellow;
+    background-color: white;
     padding: 10px;
 }
 
 footer {
     grid-area: footer;
-    background-color: orange;
+    background-color: white;
     text-align: center;
     margin-bottom: 10px;
     margin-top: 0px
